apply 0e7fd50f71c5f0179cb98a37fe358dd8c18a6e56: fix lint workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,7 +44,8 @@ jobs:
         if: env.GIT_DIFF
         id: lint_long
         run: |
-  
+          make lint-go
+
   markdown-lint:
     name: Run markdown-lint
     runs-on: ubuntu-latest
